Add new texts and images

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -8,20 +8,20 @@
   "cancel": "Cancel·lar",
   "textContinue": "Continuar",
   "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
+  "alertServerErrorText": "Alguna cosa no ens està funcionant bé. Si us plau, intenta-ho més tard.",
   "skip": "Omet",
   "neutral": "Neutral",
   "faq": "FAQ",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "Sembla que no tens connexió a internet",
+  "splashPageNoInternet": "Sembla que no tens connexió a Internet",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageSubtitle": "Més endavant podràs canviar-ho a la pàgina de configuració.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
+  "entranceTitle1": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà.",
+  "entranceTitle2": "Fes \"swipe\" amb la teva opinió sobre els temes que t'importen.",
+  "entranceTitle3": "Descobreix el teu matx i una orientació de qui votar a les eleccions.",
+  "entranceMatchesFoundQuote": "{count} 'match' trobats en les darreres 24 hores",
   "entranceStartButton": "Començar Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Hongria",
@@ -51,48 +51,55 @@
   "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
+  "resultsPage1Text": "A les pantalles següents descobriràs amb quin grup del Parlament de la UE ets més compatible, la correspondència amb les llistes locals del teu país per votar al juny i, fins i tot, algunes coses addicionals que hem descobert a partir de les teves respostes 😌",
+  "resultsPage1Button": "Clic per a continuar",
+  "resultsPage2_1Title": "Mira, entre",
+  "resultsPage2_2Title": "i jo, hi ha una mena de Love Story (EU's Version)",
   "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
   "resultsPage4TitleTop": "Pro-integració UE",
   "resultsPage4TitleBottom": "Anti-integració UE",
   "resultsPage4TitleLeft": "Esquerra",
   "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
+  "resultsPage4TitleUserHere": "It's me, hi!",
+  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
+  "resultsPage5Topic1": "Environmental issues",
+  "resultsPage5Topic2": "Human & Social Rights",
+  "resultsPage5Topic3": "Economic intervention",
+  "resultsPage6_1Title": "Val, està guai saber amb quin grup encaixo...",
+  "resultsPage6_2Title": "Però a les eleccions europees, votem per a candidatures locals",
   "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
   "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
   "resultsPage7Disclaimer": "No estan en cap ordre en concret",
   "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage8_1Text": "En {topic}, et decantes un {percentage}% cap a",
+  "resultsPage8_2Text": "Active Climate Action 🌱😌",
+  "resultsPage8Help": "Ets un lluitador climàtic! Creus que donar resposta a la crisi climàtica requereix d'acció col·lectiva, amb tothom prioritzant el tema. No sap gens de greu que la UE reguli les empreses per a fer-ho possible. Al final, de què serveix el creixement econòmic si el planeta es torna inhabitable?",
+  "resultsPage9Help": "Fes clic a les cartes per barrejar-les",
+  "resultsPage9Text1": "Les eleccions van de molts temes, però hi ha una cosa que realment",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Una notificació quan toqui anar a votar?",
+  "resultsPage10NopButton": "Nope, gràcies!",
+  "resultsPage10YesButton": "Síííííí",
+  "resultsShare": "Comparteix (coming soon ⏳)",
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
   "homePageBackToTest": "Tornar al test",
   "homePageMyResults": "Els meus resultats",
   "homePageStartButton": "Comença un nou test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
+  "settingsPageTitleLanguage": "Llengua",
   "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
   "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
   "settingsPageTitleAbout": "Sobre nosaltres",
   "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
   "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
+  "settingsPageTitlePartners": "Socis",
   "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
+  "settingsPageSubtitle1": "Patrocinadors principals",
+  "settingsPageSubtitle2": "Socis europeus",
+  "settingsPageSubtitle3": "Soci acadèmic",
+  "settingsPageSubtitle4": "Socis institucionals nacionals",
+  "settingsPageSubtitle5": "Proveïdors del servei",
+  "settingsPageShareButtonText": "Compartir (pròximament ⏳)",
   "settingsPagePrivacyPolicy": "Política de Privacitat"
 }
