--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
@@ -2,95 +2,104 @@
   "@@locale": "de",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
+  "ok": "Ok",
+  "yes": "Ja",
+  "no": "Nein",
+  "cancel": "Abbrechen",
+  "textContinue": "Fortfahren",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Es ist ein Fehler aufgetreten. Bitte versuch es später noch einmal.",
+  "skip": "Überspringen",
   "neutral": "Neutral",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Scheinbar hast du keine Internetverbindung",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Lass uns auf Deutsch weitermachen? :)",
+  "languagePageSubtitle": "Das kann später in den Einstellungen geändert werden.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Wenn diese süße Taube dir nicht helfen kann im Juni zu wählen, dann hilft dir gar nichts.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceMatchesFoundQuote": "{count} gefundene Matches in den letzten 24 Stunden",
+  "entranceStartButton": "Palumba starten",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Ungarn",
+  "denmark": "Dänemark",
+  "germany": "Deutschland",
+  "spain": "Spanien",
+  "france": "Frankreich",
+  "poland": "Polen",
+  "romania": "Rumänien",
+  "sweden": "Schweden",
+  "onBoardingStep1Title": "Wo wirst du wählen?",
+  "onBoardingStep1Subtitle": "Ich weiß nicht",
+  "onBoardingStep2Title": "Mein Alter",
+  "onBoardingStep3Title": "Ich identifiziere mich als",
+  "onBoardingStep3Option1": "Weiblich",
+  "onBoardingStep3Option2": "Männlich",
+  "onBoardingStep3Option3": "Genderfluid",
+  "onBoardingStep3Option4": "Nicht-binär",
+  "onBoardingStep3Option5": "Sonstiges",
+  "onBoardingNotAnswerButton": "Möchte ich nicht angeben",
+  "onBoardingCardQuestion": "Ich habe keine Ahnung, wen ich bei den EU-Wahlen 2024 wählen soll",
+  "onBoardingLastStepTitle": "Swipe wie sehr du zustimmst",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Deine persönlichen Ergebnisse sind auf dem Weg :)",
+  "loadingResultsPageTitle2": "Das sollte schneller gehen, als Taylor Swift Karten zu bekommen 👀 ",
+  "loadingResultsPageTitle3": "Wir suchen Matches mit Listen in {country}  🔍",
+  "loadingResultsPageTitle4": "Fast fertig,<br>ein letzter Check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Ein Match und viel mehr 👉👈",
+  "resultsPage1Text": "Auf den nächsten Bildschirmen wirst du deine kompatibelste Gruppe im EU-Parlament entdecken und passende lokalen Listen, für die du im Juni wählen kannst. Basierend auf deinen Antworten haben wir zudem ein paar interessante Extras für dich 😌",
+  "resultsPage1Button": "Tippe zum Fortfahren",
+  "resultsPage2_1Title": "Ehrlich, zwischen",
+  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage3Title": "Wie nah bin ich den Fraktionen im Europäischen Parlament",
+  "resultsPage4TitleTop": "Pro-EU Integration",
+  "resultsPage4TitleBottom": "Anti-EU Integration",
+  "resultsPage4TitleLeft": "Links",
+  "resultsPage4TitleRight": "Rechts",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Spezifische Themen - Welchen Fraktionen im EU Parlament bin ich am nächsten?",
+  "resultsPage5Topic1": "Umweltthemen",
+  "resultsPage5Topic2": "Menschen- und Sozialrechte",
+  "resultsPage5Topic3": "Wirtschaftsintervention",
+  "resultsPage6_1Title": "Ok, es ist cool zu wissen, welche Gruppe mich bekommt...",
+  "resultsPage6_2Title": "Aber bei den EU-Wahlen wählen wir lokale Listen",
+  "resultsPage6Text": "Auf den nächsten Bildschirmen wirst du die Kandidatenlisten von deinem Land sehen, die am ehesten zu dir passen.",
+  "resultsPage7Title": "Die Kandidat:innen in {country} passen am besten zu {group}",
+  "resultsPage7Disclaimer": "In keiner bestimmten Reihenfolge.",
+  "resultsPage7NoLocalCandidates": "Keine lokalen Parteien in {country} gefunden",
+  "resultsPage8_1Text": "Bezüglich {topic}, bist du {percentage}% mehr interessiert an",
+  "resultsPage8_2Text": "Active Climate Action 🌱😌",
+  "resultsPage8Help": "Du bist ein Klimakämpfer! Du glaubst, dass die Bewältigung der Klimakrise gemeinsames Handeln erfordert und ganz oben auf der Prioritätenliste stehen sollte. Du hast auch nichts dagegen, wenn die EU dafür Unternehmen reguliert. Denn was nützt uns Wirtschaftswachstum, wenn die Erde unbewohnbar wird?",
+  "resultsPage9Help": "Klicke auf die Karten, um sie zu mischen",
+  "resultsPage9Text1": "Bei Wahlen geht es um viele Themen, aber es gibt eines, that really",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "A notification when it’s time to go vote?",
+  "resultsPage10NopButton": "Nein danke!",
+  "resultsPage10YesButton": "Jaaaaaa",
+  "resultsShare": "Teilen",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} gefundene Matches in den letzten 24 Stunden",
+  "homePageBackToTest": "Zurück zum Test",
+  "homePageMyResults": "Meine Ergebnisse",
+  "homePageStartButton": "Starte einen neuen Test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Sprache",
+  "settingsPageSubtitleLanguage": "Welche Sprache bevorzugst du?",
+  "settingsPageTextLanguage": "Um die Sprache zu ändern, klicke auf die derzeitige Sprache",
+  "settingsPageTitleAbout": "Über uns",
+  "settingsPageTextAbout": "Palumba ist kein Unternehmen, keine politische Partei und keine Regierung. Wir sind ein unabhängiger gemeinnütziger Verein bestehend aus 120 + jungen Menschen 🐦 aus ganz Europa und haben letzten Sommer mit dem Entwickeln dieser App gestartet. Wir haben ein Ziel: Dich dabei zu unterstützen die EU Wahlen besser zu verstehen und die Kandidatenlisten passend zu deinen Einstellungen zu finden - All das damit du mit mehr Selbstvertrauen die Parteien wählen kannst, die zu deinen Prioritäten passen. Unser Algorithmus ist Open-Source, die Statements wurden von Politikwissenschaftlern überprüft und deine Daten sind sooo verschlüsselt, dass wir keine Möglichkeit haben, dich jemals zu identifizieren :)",
+  "settingsPageTitleAssociation": "Der Verein",
+  "settingsPageTitlePartners": "Partner",
+  "settingsPageTextPartners": "Partner haben keinen redaktionellen Einfluss auf die Inhalte der App. Wir sind eine unparteiische Initiative mit einem klaren Ziel: Dir dabei zu helfen herauszufinden, wer deine Einstellungen auf nationaler und europäischer Ebene unterstützt.",
+  "settingsPageSubtitle1": "Hauptsponsoren",
+  "settingsPageSubtitle2": "Europäische Partner",
+  "settingsPageSubtitle3": "Akademische Partner",
+  "settingsPageSubtitle4": "Nationale institutionelle Partner",
+  "settingsPageSubtitle5": "Serviceanbieter",
+  "settingsPageShareButtonText": "Share",
+  "settingsPagePrivacyPolicy": "Datenschutzerklärung"
 }
