--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
@@ -2,95 +2,104 @@
   "@@locale": "fr",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "ok": "Ok",
+  "yes": "Oui",
+  "no": "Non",
+  "cancel": "Annuler",
+  "textContinue": "Continuer",
+  "alertServerErrorTitle": "Oups !",
+  "alertServerErrorText": "Quelque chose s’est mal passé de notre côté. Veuillez réessayer.",
+  "skip": "Ignorer",
+  "neutral": "Neutre",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "On dirait que tu n'es plus connecté à internet :(",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "On continue en Français ? :)",
+  "languagePageSubtitle": "Cela pourra être modifié plus tard dans les paramètres.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Si ce pigeon n'arrive pas à te faire voter en juin, rien n'y arrivera.",
+  "entranceTitle2": "Swipe ton opinion sur une multitude de sujets.",
+  "entranceTitle3": "Découvre qui soutient tes priorités et candidate aux élections.",
+  "entranceMatchesFoundQuote": "{count} matches trouvés dans les dernières 24h",
+  "entranceStartButton": "Lancer Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Hongrie",
+  "denmark": "Danemark",
+  "germany": "Allemagne",
+  "spain": "Espagne",
+  "france": "France",
+  "poland": "Pologne",
+  "romania": "Roumanie",
+  "sweden": "Suède",
+  "onBoardingStep1Title": "Dans quel pays votes-tu ?",
+  "onBoardingStep1Subtitle": "Je ne sais pas",
+  "onBoardingStep2Title": "Mon âge",
+  "onBoardingStep3Title": "Je m'identifie comme",
+  "onBoardingStep3Option1": "Femme",
+  "onBoardingStep3Option2": "Homme",
+  "onBoardingStep3Option3": "Gender-fluide",
+  "onBoardingStep3Option4": "Non-binaire",
+  "onBoardingStep3Option5": "Autre",
+  "onBoardingNotAnswerButton": "Préfère ne pas dire",
+  "onBoardingCardQuestion": "Je n'ai aucune idée de pour qui voter aux Élections Européennes 2024",
+  "onBoardingLastStepTitle": "Swipe en fonction de ton opinion",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Tes résultats personnalisés sont en route :)",
+  "loadingResultsPageTitle2": "Ça devrait être plus rapide que d'obtenir des billets pour Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Recherche de matches avec les listes de candidat·es en {country} 🔍",
+  "loadingResultsPageTitle4": "Presque prêt, un dernier check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Un match et bien plus 👉👈",
+  "resultsPage1Text": "Dans les écrans suivants, tu trouveras le groupe le plus compatible avec tes idées au Parlement européen, les listes locales correspondantes dans ton pays, et nous avons même trouvé quelques infos supplémentaires à partir de tes réponses 😌",
+  "resultsPage1Button": "Appuie pour continuer",
+  "resultsPage2_1Title": "En vrai, entre le",
+  "resultsPage2_2Title": "et moi, c'est une Love Story (EU's Version)",
+  "resultsPage3Title": "Ma proximité avec les Groupes Parlementaires Européens",
+  "resultsPage4TitleTop": "Pro Intégration européenne",
+  "resultsPage4TitleBottom": "Anti Intégration européenne",
+  "resultsPage4TitleLeft": "de Gauche",
+  "resultsPage4TitleRight": "de Droite",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Sur des sujets plus spécifiques, de quel groupe suis-je plus proche ?",
+  "resultsPage5Topic1": "Questions environnementales",
+  "resultsPage5Topic2": "Droits Humains et Sociaux",
+  "resultsPage5Topic3": "Intervention Économique",
+  "resultsPage6_1Title": "Ok, c'est cool de savoir quel groupe me convient...",
+  "resultsPage6_2Title": "Mais aux Élections Européennes, on vote pour une liste locale",
+  "resultsPage6Text": "Dans l'écran qui suit, tu peux découvrir les listes de candidat·es de ton pays qui sont les plus susceptibles de rejoindre ton groupe parlementaire européen.",
+  "resultsPage7Title": "Les listes en {country} les plus alignées avec {group}",
+  "resultsPage7Disclaimer": "Dans aucun ordre particulier.",
+  "resultsPage7NoLocalCandidates": "Aucune liste locale trouvée en {country}",
+  "resultsPage8_1Text": "Sur {topic}, tu es {percentage} plus pour",
+  "resultsPage8_2Text": "Action climatique 🌱😌",
+  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
+  "resultsPage9Help": "Appuie sur la carte pour en voir d'autres",
+  "resultsPage9Text1": "Les élections portent sur beaucoup de sujets, mais il y a une chose qui vraiment",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Recevoir un rappel d'aller voter ?",
+  "resultsPage10NopButton": "Non merci !",
+  "resultsPage10YesButton": "Ouiiiii",
+  "resultsShare": "Partager",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} matches trouvés dans les dernières 24h",
+  "homePageBackToTest": "Retour au test",
+  "homePageMyResults": "Mes résultats",
+  "homePageStartButton": "Lancer un nouveau test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Langue",
+  "settingsPageSubtitleLanguage": "Je préfère utiliser Palumba en",
+  "settingsPageTextLanguage": "Pour changer la langue, clique sur celle ci-dessous",
+  "settingsPageTitleAbout": "À propos",
+  "settingsPageTextAbout": "Palumba n'est ni une entreprise, ni un parti politique, ni un gouvernement. Nous sommes une association indépendante à but non lucratif de plus de 120 jeunes 🐦 de toute l'Europe qui se sont réuni·es l'été dernier et ont commencé à créer cette application. Nous avons un objectif : t'aider à mieux comprendre comment fonctionnent les élections européennes et quelles listes de candidat·es pourraient correspondre à tes idées, pour que tu puisses voter plus en confiance pour celles et ceux qui soutiennent tes priorités. Notre algorithme est open-source, les déclarations sur lesquelles tu swipes ont été revues par des chercheur·ses, et tes données sont tellement anonymisées que nous n'avons aucun moyen de t'identifier :)",
+  "settingsPageTitleAssociation": "L'association",
+  "settingsPageTitlePartners": "Partenaires",
+  "settingsPageTextPartners": "Important de te préciser que les partenaires n'ont pas de pouvoir éditorial sur le contenu de l'application, qui reste une initiative non partisane avec un objectif clair : t'aider à comprendre qui soutient tes opinions aux niveaux européen et national.",
+  "settingsPageSubtitle1": "Sponsors Principaux",
+  "settingsPageSubtitle2": "Partenaires Européens",
+  "settingsPageSubtitle3": "Partenaire académique",
+  "settingsPageSubtitle4": "Partenaires Institutionnels Nationaux",
+  "settingsPageSubtitle5": "Prestataires de services",
+  "settingsPageShareButtonText": "Partager",
+  "settingsPagePrivacyPolicy": "Protection des données"
 }
