--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_nl.arb
@@ -2,95 +2,104 @@
   "@@locale": "nl",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "ok": "Ok",
+  "yes": "Ja",
+  "no": "Nee",
+  "cancel": "Annuleren",
+  "textContinue": "Doorgaan",
+  "alertServerErrorTitle": "Oeps!",
+  "alertServerErrorText": "Er is iets misgelopen. Probeer het later opnieuw.",
+  "skip": "Overslaan",
+  "neutral": "Neutraal",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Het lijkt erop dat je geen internetverbinding hebt",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Laten we doorgaan in het Nederlands, hè? :)",
+  "languagePageSubtitle": "Dit kan later worden gewijzigd in de instellingen.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Als deze leuke duif je niet kan helpen stemmen in juni, dan lukt er niks meer.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceMatchesFoundQuote": "{count} matches gevonden in de afgelopen 24 uur",
+  "entranceStartButton": "Start Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Hongarije",
+  "denmark": "Denemarken",
+  "germany": "Duitsland",
+  "spain": "Spanje",
+  "france": "Frankrijk",
+  "poland": "Polen",
+  "romania": "Roemenië",
+  "sweden": "Zweden",
+  "onBoardingStep1Title": "Waar ga je stemmen?",
+  "onBoardingStep1Subtitle": "Ik weet het niet",
+  "onBoardingStep2Title": "Mijn leeftijd",
+  "onBoardingStep3Title": "Ik identificeer als",
+  "onBoardingStep3Option1": "Vrouw",
+  "onBoardingStep3Option2": "Man",
+  "onBoardingStep3Option3": "Gendervloeiend",
+  "onBoardingStep3Option4": "Non-binair",
+  "onBoardingStep3Option5": "Anders",
+  "onBoardingNotAnswerButton": "Zeg ik liever niet",
+  "onBoardingCardQuestion": "Ik heb geen idee op wie ik zou stemmen bij de Europese verkiezingen 2024",
+  "onBoardingLastStepTitle": "Swipe volgens je overeenkomst",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Je gepersonaliseerde resultaten zijn onderweg :)",
+  "loadingResultsPageTitle2": "Dit gaat sneller dan kaartjes voor Taylor Swift scoren 👀",
+  "loadingResultsPageTitle3": "Matches vinden met kandidatenlijsten in{country}🔍",
+  "loadingResultsPageTitle4": "Bijna klaar, even een laatste check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Een match en veel meer 👉👈",
+  "resultsPage1Text": "Op de volgende schermen ontdek je jouw meest passende groep in het Europees Parlement en de bijpassende lokale lijsten om in juni in jouw land op te stemmen. Daarnaast hebben we zelfs een paar extra dingen gevonden op basis van jouw antwoorden 😌",
+  "resultsPage1Button": "Druk om door te gaan",
+  "resultsPage2_1Title": "Eerlijk gezegd is er tussen ",
+  "resultsPage2_2Title": "en mij een soort Love Story (EU's Version)",
+  "resultsPage3Title": "Hoe nauw verbonden ik ben met de groepen in het Europees Parlement",
+  "resultsPage4TitleTop": "Voorstander van Europese integratie",
+  "resultsPage4TitleBottom": "Tegenstander van Europese integratie",
+  "resultsPage4TitleLeft": "Links",
+  "resultsPage4TitleRight": "Rechts",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Welke fractie van het Europese parlement staat op specifieke onderwerpen dichter bij mij?",
+  "resultsPage5Topic1": "Klimaat vraagstukken",
+  "resultsPage5Topic2": "Sociaal-culturele vraagstukken",
+  "resultsPage5Topic3": "Economische vraagstukken",
+  "resultsPage6_1Title": "Oké, goed om te weten welke fractie mij begrijpt...",
+  "resultsPage6_2Title": "Maar bij de Europese verkiezingen stemmen we op nationale partijen",
+  "resultsPage6Text": "Op de volgende slides ontdek je welke kandidaten uit jouw land zich het meest waarschijnlijk bij jouw match zullen voegen.",
+  "resultsPage7Title": "De kandidaten in {country} die het meest overeenkomen met {group}",
+  "resultsPage7Disclaimer": "In willekeurige volgorde.",
+  "resultsPage7NoLocalCandidates": "Geen nationale partijen gevonden in {country}",
+  "resultsPage8_1Text": "In het geval van {topic}, sta je {percentage} dichterbij",
+  "resultsPage8_2Text": "Actieve Klimaatactie",
+  "resultsPage8Help": "Jij bent een strijder tegen klimaatverandering! Jij gelooft dat het aanpakken van de klimaatcrisis gemeenschappelijke actie vereist, waarbij iedereen het een topprioriteit maakt. Jij hebt er geen probleem dat de EU hiervoor bedrijven reguleert. Wat is ook het nut van economische groei als de planeet onbewoonbaar wordt?",
+  "resultsPage9Help": "Klik op de kaarten om ze te schudden",
+  "resultsPage9Text1": "Verkiezingen gaan over heel veel dingen, maar er is maar one thing that really",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Wil je een herinnering wanneer je kan stemmen?",
+  "resultsPage10NopButton": "Nee dankje!",
+  "resultsPage10YesButton": "Yesssss",
+  "resultsShare": "Delen",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} matches gevonden in de afgelopen 24 uur",
+  "homePageBackToTest": "Terug naar de test",
+  "homePageMyResults": "Mijn resultaten",
+  "homePageStartButton": "Start een nieuwe test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
+  "settingsPageTitleLanguage": "Taal",
+  "settingsPageSubtitleLanguage": "Ik gebruik deze app het liefst in het",
+  "settingsPageTextLanguage": "Klik op de huidige taal om de taal te veranderen",
+  "settingsPageTitleAbout": "Over ons",
+  "settingsPageTextAbout": "Palumba is geen bedrijf, geen politieke partij en geen regering. We zijn een onafhankelijke non-profit vereniging van 120+ jonge mensen 🐦 uit heel Europa die afgelopen zomer bijeen zijn gekomen en zijn begonnen met het bouwen van deze app. We hebben één doel: je helpen te begrijpen hoe de Europese verkiezingen werken en welke kandidatenlijsten met jouw voorkeuren overeenkomen zodat je met meer vertrouwen kunt stemmen voor mensen die jouw waarden delen. Ons algoritme is open source, de verklaringen waarop je swipet zijn beoordeeld door politieke wetenschappers en jouw gegevens zijn zo versleuteld dat we op geen enkele mogelijke manier zouden kunnen achterhalen wie je bent :)",
+  "settingsPageTitleAssociation": "De vereniging",
   "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTextPartners": "Het is belangrijk om je te vertellen dat onze partners geen directe of indirecte invloed hebben op de inhoud van de app. De app is en blijft een onafhankelijk initiatief met het doel jou inzicht te geven in wie jouw standpunten vertegenwoordigd op Europees en nationaal niveau.",
+  "settingsPageSubtitle1": "Hoofdsponsoren",
+  "settingsPageSubtitle2": "Europese partners",
+  "settingsPageSubtitle3": "Academische partner",
+  "settingsPageSubtitle4": "Nationale partners",
+  "settingsPageSubtitle5": "Dienstverleners",
+  "settingsPageShareButtonText": "Delen",
+  "settingsPagePrivacyPolicy": "Privacybeleid"
 }
