--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ro.arb
@@ -1,96 +1,105 @@
 {
   "@@locale": "ro",
-  "appName": "Palumba EU",
+  "appName": "Palumba UE",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "ok": "Ok",
+  "yes": "Da",
+  "no": "Nu",
+  "cancel": "Anulează",
+  "textContinue": "Continuă",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Ceva nu funcționează la noi. Te rugăm încearcă mai târziu.",
+  "skip": "Sari peste",
+  "neutral": "Neutru",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Se pare că nu ești conectat/ă la internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Continuăm în engleză? :)",
+  "languagePageSubtitle": "Acest lucru poate fi schimbat mai târziu în setări.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Dacă acest porumbel drăguț nu te poate ajuta să votezi în iunie, nimic nu te poate ajuta.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceMatchesFoundQuote": "{count} Potriviri găsite în ultimele 24 de ore",
+  "entranceStartButton": "Pornește Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Ungaria",
+  "denmark": "Danemarca",
+  "germany": "Germania",
+  "spain": "Spania",
+  "france": "Franța",
+  "poland": "Polonia",
+  "romania": "România",
+  "sweden": "Suedia",
+  "onBoardingStep1Title": "Unde vei vota?",
+  "onBoardingStep1Subtitle": "Nu știu",
+  "onBoardingStep2Title": "Vârsta mea",
+  "onBoardingStep3Title": "Mă identific ca",
+  "onBoardingStep3Option1": "Femeie",
+  "onBoardingStep3Option2": "Bărbat",
+  "onBoardingStep3Option3": "Gen-fluid",
+  "onBoardingStep3Option4": "Non-binar",
+  "onBoardingStep3Option5": "Altceva",
+  "onBoardingNotAnswerButton": "Prefer să nu menționez",
+  "onBoardingCardQuestion": "Nu am idee cu cine să votez la Alegerile Europene din 2024",
+  "onBoardingLastStepTitle": "Glisează în dreapta sau în stânga în conformitate cu părerea ta",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Rezultatele tale personalizate vor ajunge la tine imediat :)",
+  "loadingResultsPageTitle2": "O să meargă mai repede decât să încerci să iei bilete la Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Căutăm potriviri cu candidații de pe listele în {country} 🔎",
+  "loadingResultsPageTitle4": "Aproape gata, <br> verificăm încă odată...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "O potrivire și chiar mai mult de atât 👉👈",
+  "resultsPage1Text": "Pe următoarele pagini, vei descoperi grupul parlamentar european, lista locală corespunzătoare de candidați cu care poți vota în iunie în țara ta și cu care ești cel/cea/cei mai compatibil/ă/x, și am găsit chiar și câteva lucruri în plus în baza răspunsurilor tale  😌",
+  "resultsPage1Button": "Apasă pentru a continua",
+  "resultsPage2_1Title": "Sincer, între",
+  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage3Title": "Cât de mult mă aliniez cu grupurile parlamentare europene",
+  "resultsPage4TitleTop": "Pro integrare Europeană",
+  "resultsPage4TitleBottom": "Împotriva integrării europene",
+  "resultsPage4TitleLeft": "Stânga",
+  "resultsPage4TitleRight": "Dreapta",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Pe teme specifice, cu ce grupuri parlamentare europene mă aliniez?",
+  "resultsPage5Topic1": "Probleme legate de mediu",
+  "resultsPage5Topic2": "Drepturi Umane & Sociale",
+  "resultsPage5Topic3": "Intervenționism Economic",
+  "resultsPage6_1Title": "Bine, e super să știu care grup chiar mă reprezintă...",
+  "resultsPage6_2Title": "Dar la alegerile europene, votăm pentru candidații de pe listele locale",
+  "resultsPage6Text": "Pe paginile următoare, vei descoperi listele cu candidați din țara ta cu care ai cele mai mari șanse să te potrivești.",
+  "resultsPage7Title": "Candidații în {country} se aliniază cel mai mult cu {group}",
+  "resultsPage7Disclaimer": "În nicio ordine specială.",
+  "resultsPage7NoLocalCandidates": "Nu au fost găsite partide locale în {country}",
+  "resultsPage8_1Text": "Pe {topic}, ești mai degrabă {percentage}",
+  "resultsPage8_2Text": "Politici pentru Mediu Proactive 🌱😌",
+  "resultsPage8Help": "Ești o persoană care vrea să lupte împotriva schimbării climatice! Crezi că lupta cu schimbarea climatică necesită acțiuni la nivel de colectiv, unde toți recunoaștem că schimbarea climatică este o prioritate urgentă. Ești de acord ca UE să reglementeze companiile private în acest scop. Toate ca toate, dar care este scopul creșterii economice dacă planeta devine de nelocuit?",
+  "resultsPage9Help": "Apasă pe cărți pentru a le amesteca",
+  "resultsPage9Text1": "Alegerile sunt despre multe lucruri, dar există un lucru care chiar",
+  "resultsPage9Text2": "Rezonează cu mine 🫡",
+  "resultsPage10Title": "O notificare atunci când este timpul să mergem să votăm?",
+  "resultsPage10NopButton": "Nu, mulțumesc!",
+  "resultsPage10YesButton": "Daaaaa",
+  "resultsShare": "Distribuie",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} potriviri găsite în ultimele 24 de ore",
+  "homePageBackToTest": "Înapoi la test",
+  "homePageMyResults": "Rezultatele mele",
+  "homePageStartButton": "Începe un test nou",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Limbă",
+  "settingsPageSubtitleLanguage": "Prefer să folosesc aplicația în",
+  "settingsPageTextLanguage": "Pentru a schimba limba, apasă pe cea curentă",
+  "settingsPageTitleAbout": "Despre",
+  "settingsPageTextAbout": "Palumba nu este o companie, nici un partid politic și nici un guvern. Este o asociație independentă de tip non-profit care a adus împreună vara trecută peste 120 de oameni tineri 🐦 de prin toată Europa pentru a crea această aplicație. Avem un singur scop: să te ajutăm să înțelegi mai bine care e treaba cu alegerile europene și care listă de candidați ar putea să rezoneze cu ideile tale, astfel încât să poți vota cu mai multă încredere oameni care îți susțin prioritățile. Algoritmul nostru este de tip open-source, afirmațiile pe care glisezi stânga dreapta au fost verificate de politologi, iar datele tale au fost criptate atââât de bine că nu avem cum să știm cine ești vreodată :)",
+  "settingsPageTitleAssociation": "Asociația",
+  "settingsPageTitlePartners": "Parteneri",
+  "settingsPageTextPartners": "Este important să știi că partenerii noștri nu au vreun drept editorial asupra conținutului aplicației, care rămâne o inițiativă non-partizană cu un singur scop: să te ajute să înțelegi cine îți susține opiniile la nivel european și la nivel național.",
+  "settingsPageSubtitle1": "Sponsori Principali",
+  "settingsPageSubtitle2": "Parteneri Europeni",
+  "settingsPageSubtitle3": "Parteneri Academici",
+  "settingsPageSubtitle4": "Parteneri Instituționali Naționali",
+  "settingsPageSubtitle5": "Furnizori Servicii",
+  "settingsPageShareButtonText": "Distribuie",
+  "settingsPagePrivacyPolicy": "Politică de confidențialitate"
 }
