--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -18,9 +18,9 @@
   "languagePageTitle": "Let’s continue in English? :)",
   "languagePageSubtitle": "This can be changed later in settings.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Welcome to the exclusive Beta of Palumba",
-  "entranceTitle2": "If this cute pigeon can't help you vote in June, nothing will",
-  "entranceTitle3": "Get ready to disseminate the app massively on May 9th",
+  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
   "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
   "entranceStartButton": "Start Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
@@ -48,9 +48,9 @@
   "loadingResultsPageTitle1": "Your personalised results are on their way :)",
   "loadingResultsPageTitle2": "This shall be quicker than getting Taylor Swift tickets 👀 ",
   "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
-  "loadingResultsPageTitle4": "Almost ready,\none last check...",
+  "loadingResultsPageTitle4": "Almost ready, one last check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "A match and much more \uD83D\uDC49\uD83D\uDC48",
+  "resultsPage1Title": "A match and much more 👉👈",
   "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
   "resultsPage1Button": "Press to continue",
   "resultsPage2_1Title": "Honestly, between the",
@@ -60,24 +60,24 @@
   "resultsPage4TitleBottom": "Anti-EU Integration",
   "resultsPage4TitleLeft": "Left",
   "resultsPage4TitleRight": "Right",
-  "resultsPage4TitleUserHere": "It’s you, hi!",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
   "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
-  "resultsPage5Topic1": "Environment",
-  "resultsPage5Topic2": "Humans & Social Rights",
+  "resultsPage5Topic1": "Environmental issues",
+  "resultsPage5Topic2": "Human & Social Rights",
   "resultsPage5Topic3": "Economic intervention",
-  "resultsPage6_1Title": "Ok,it's cool knowing which group gets me...",
-  "resultsPage6_2Title": "But at the EU Elections, you vote for a local list",
+  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
+  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
   "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
   "resultsPage7Title": "The candidates in {country} most aligned with {group}",
   "resultsPage7Disclaimer": "In no particular order.",
   "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8_1Text": "On Environmental issues, you’re {percentage}% more into",
-  "resultsPage8_2Text": "Active Climate Action \uD83C\uDF31\uD83D\uDE0C",
+  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
+  "resultsPage8_2Text": "Active Climate Action 🌱😌",
   "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
   "resultsPage9Help": "Click on the cards to shuffle",
-  "resultsPage9Text1": "Elections are about many topics,but there’s one thing that really",
-  "resultsPage9Text2": "Belongs With Me \uD83E\uDEE1",
-  "resultsPage10Title": "A notification when\nit’s time to go vote?",
+  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "A notification when it’s time to go vote?",
   "resultsPage10NopButton": "No thanks!",
   "resultsPage10YesButton": "Yesssss",
   "resultsShare": "Share",
@@ -91,7 +91,7 @@
   "settingsPageSubtitleLanguage": "I prefer to use this app in",
   "settingsPageTextLanguage": "To change the language, click on the current one",
   "settingsPageTitleAbout": "About",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people \uD83D\uDC26 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
   "settingsPageTitleAssociation": "The association",
   "settingsPageTitlePartners": "Partners",
   "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
@@ -101,5 +101,5 @@
   "settingsPageSubtitle4": "National Institutional Partners",
   "settingsPageSubtitle5": "Service Providers",
   "settingsPageShareButtonText": "Share",
-  "settingsPagePrivacyPolicy": "Privacy Policy"
+  "settingsPagePrivacyPolicy": "Data Protection"
 }
